fixed token length bug